# birtday-reminder

./: Cargo.toml  README.md  app.json  package.json
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.tsx
client/src/components/dashboard/: dashboard.component.tsx  dashboard.scss
client/src/components/login/: form.tsx  login.component.tsx  login.scss
client/src/components/notfound/: notfound.component.tsx
client/src/http/: index.ts
client/src/types/: user.types.ts
client/src/utils/: auth.util.ts
email/: birthday.html  index.js  package.json
scripts/: init.sql
src/: main.rs
src/controllers/admin/: mod.rs  user.rs
src/controllers/auth/: login.rs  mod.rs
src/database/: postgres.rs
src/email/: mod.rs
src/helpers/: bcrypt_helper.rs  mod.rs
src/models/: dob.rs  mod.rs
src/types/: mod.rs  postgres_types.rs  user.rs
