[package]
name = "server"
version = "0.1.0"
authors = ["saiumesh-apty"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.5"

#Database dep
postgres = { version = "0.15.2", features=["with-chrono"] }
r2d2_postgres = "0.14.0"
r2d2 = "0.8.5"

#static var dep
lazy_static = "1.3.0"

#json_handler
serde_json = "1.0.40"
serde = { version = "1.0.94", features = ["derive"] }

#dates_handler
chrono = { version = "0.4.7", features = ["serde"] }

#scheduler
job_scheduler = "1.0.6"

#password_hash
bcrypt = "0.5.0"

#static files
actix-files = "0.1.4"

#cors
actix-cors = "0.1.0"